Prevent expand all button from changing width in collapse state

--- a/src/internal-packages/crud/styles/document-actions.less
+++ b/src/internal-packages/crud/styles/document-actions.less
@@ -10,7 +10,12 @@
   }
 
   &-expand-button {
-  	padding: 0px 7px 0px 7px;
+  	padding: 0px 5px 0px 5px;
+
+    .fa {
+      height: 12px;
+      width: 12px;
+    }
   }
 
   &-right {
